UI updates - updated home page banner bug on mobile where there was lots of padding for the banner image. - hopefully improved the mygame page so that now it behaves better under scroll. not a proper fix. Proper fix will require major css/html reworks.

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -234,6 +234,12 @@ section#content-container {
     //height: 900px; Hide the scroll bars, decided against it
     .content-area {
       overflow: scroll;
+      display: flex;
+      flex-direction: column;
+
+      @media (min-width: 575px) {
+        max-height: 100vh;
+      }
     }
     .search-header {
       position: relative;
