--- a/resources/assets/sass/pages/_profileV2.scss
+++ b/resources/assets/sass/pages/_profileV2.scss
@@ -460,9 +460,13 @@
     justify-content: space-between;
     padding: 4px 24px;
     width: 100%;
-    height: 320px;
+    height: 130px;
     z-index: 2;
     font-family: 'Montserrat Alternates', sans-serif;
+
+    @media (min-width: 575px){
+      height: 320px;
+    }
 
     #header {
       display: flex;
